# StellarPass

./: .gitignore  Dockerfile  README.md  deploy-verifier.mjs  extract-vk.mjs  init-new-verifier.mjs  init-verifier.mjs  init-verifier2.mjs  next.config.ts  package-lock.json  package.json  prover-server.mjs  render.yaml  test-verify.mjs
.codex/: hooks.json
app/: globals.css  layout.tsx  page.tsx
app/api/check-identity/: route.ts
app/api/demo-transfer/: route.ts
app/api/generate-proof/: route.ts
app/api/issue-credential/: route.ts
app/api/stamp-identity/: route.ts
app/check/: page.tsx
app/components/: globe.tsx  hero.tsx  site.tsx
app/demo/: page.tsx
app/verify/: page.tsx
circuits/: stellarpass_credential.json
circuits/stellarpass_credential/: Nargo.toml
circuits/stellarpass_credential/src/: main.nr
contracts/: REDEPLOY.md
contracts/stellarpass-verifier/: Cargo.toml
contracts/stellarpass-verifier/src/: lib.rs
scripts/: prover.mjs  setup-bb.sh
